--- a/JOB_frontend/Home.html
+++ b/JOB_frontend/Home.html
@@ -3,21 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title> Home</title>
   <link rel="stylesheet" href="Home.css">
 </head>
 <body>
   <!-- Navbar -->
   <nav>
-    <img src="" alt="Logo">
+<a href="./Home.html"> <img src="" alt="Logo"> 
+     </a>
     <div id="searchbar">
       <input type="text" placeholder="Search jobs...">
       <button>Search</button>
     </div>
     <ul>
-      <li>Contact</li>
-      <li>About Us</li>
-      <li>Interested</li>
+      <li><a href="">Contact</a></li>
+      <li><a href="">About Us</a></li>
+      <li><a href="">Interested</a></li>
+      <li><a href="./job.html">Add Jobs</a></li>
     </ul>
   </nav>
 
@@ -36,114 +38,14 @@
 
     <!-- Jobs Section -->
     <main class="jobs">
-      <div class="job-card">
-        <h2 class="job-title">Python Developer</h2>
-        <p class="job-description">
-          We are looking for a skilled Python developer with Django and REST API experience to join our dynamic team.
-        </p>
-        <p class="job-contact">📧 hr@company.com</p>
-        <div class="button-container">
-          <button class="apply-btn">Apply Now</button>
-          <button class="fav-btn">Interested</button>
-        </div>
-      </div>
+     
 
-      <div class="job-card">
-        <h2 class="job-title">Frontend Engineer</h2>
-        <p class="job-description">
-          Build scalable web applications with ReactJS and TailwindCSS. Experience with modern development practices required.
-        </p>
-        <p class="job-contact">📧 jobs@techcorp.com</p>
-        <div class="button-container">
-          <button class="apply-btn">Apply Now</button>
-          <button class="fav-btn">Interested</button>
-        </div>
-      </div>
+      
 
-      <div class="job-card">
-        <h2 class="job-title">Backend Developer</h2>
-        <p class="job-description">
-          Build scalable server-side applications with Node.js and Express. Database experience with MongoDB required.
-        </p>
-        <p class="job-contact">📧 careers@startup.com</p>
-        <div class="button-container">
-          <button class="apply-btn">Apply Now</button>
-          <button class="fav-btn">Interested</button>
-        </div>
-      </div>
 
-      <div class="job-card">
-        <h2 class="job-title">UI/UX Designer</h2>
-        <p class="job-description">
-          Create beautiful and intuitive user interfaces and experiences. Proficiency in Figma and design systems required.
-        </p>
-        <p class="job-contact">📧 design@creative.com</p>
-        <div class="button-container">
-          <button class="apply-btn">Apply Now</button>
-          <button class="fav-btn">Interested</button>
-        </div>
-      </div>
-
-      <div class="job-card">
-        <h2 class="job-title">Data Scientist</h2>
-        <p class="job-description">
-          Analyze complex data sets and build machine learning models for actionable business insights and predictions.
-        </p>
-        <p class="job-contact">📧 data@analytics.com</p>
-        <div class="button-container">
-          <button class="apply-btn">Apply Now</button>
-          <button class="fav-btn">Interested</button>
-        </div>
-      </div>
-
-      <div class="job-card">
-        <h2 class="job-title">DevOps Engineer</h2>
-        <p class="job-description">
-          Manage cloud infrastructure and CI/CD pipelines. Experience with AWS, Docker, and Kubernetes preferred.
-        </p>
-        <p class="job-contact">📧 ops@cloudtech.com</p>
-        <div class="button-container">
-          <button class="apply-btn">Apply Now</button>
-          <button class="fav-btn">Interested</button>
-        </div>
-      </div>
-
-      <div class="job-card">
-        <h2 class="job-title">Mobile Developer</h2>
-        <p class="job-description">
-          Develop cross-platform mobile applications using React Native or Flutter. App store deployment experience required.
-        </p>
-        <p class="job-contact">📧 mobile@appdev.com</p>
-        <div class="button-container">
-          <button class="apply-btn">Apply Now</button>
-          <button class="fav-btn">Interested</button>
-        </div>
-      </div>
-
-      <div class="job-card">
-        <h2 class="job-title">Product Manager</h2>
-        <p class="job-description">
-          Lead product strategy and roadmap development. Experience with agile methodologies and user research required.
-        </p>
-        <p class="job-contact">📧 product@innovation.com</p>
-        <div class="button-container">
-          <button class="apply-btn">Apply Now</button>
-          <button class="fav-btn">Interested</button>
-        </div>
-      </div>
-
-      <div class="job-card">
-        <h2 class="job-title">Cybersecurity Analyst</h2>
-        <p class="job-description">
-          Protect organization's digital assets through threat analysis and security monitoring. CISSP certification preferred.
-        </p>
-        <p class="job-contact">📧 security@safenet.com</p>
-        <div class="button-container">
-          <button class="apply-btn">Apply Now</button>
-          <button class="fav-btn">Interested</button>
-        </div>
-      </div>
     </main>
   </div>
+  <script src="./Home.js"></script>
+
 </body>
 </html>
